--- a/views/hello.pug
+++ b/views/hello.pug
@@ -1,4 +1,5 @@
 extends layout
 
 block content
-    p this is content
+    h2 Year will end in #{h.moment().endOf('year').from(date)}
+    h2 Sale ends in #{h.moment().endOf('day').fromNow()}
